Num detail fields debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
@@ -63,7 +63,7 @@ $viewTools.log("Heading calcs are $headingCalcs")
   #if(!$headingTables.contains($table))
     #set($success = $detailMap.put($table, true))
     #if(!$reportField.getBaseField().isPrimaryKey())
-      #if(($reportField.getClass().getSimpleName() != "ReportCalcFieldDefn") || (!$headingCalcs.contains($reportField)))
+      #if(($reportField.getClass().getSimpleName() != "ReportCalcFieldDefn") && (!$headingCalcs.contains($reportField)))
         $viewTools.log("Detail field $reportField")
         #set($numDetailFields = $numDetailFields + 1)
       #end
