--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
@@ -29,12 +29,13 @@
     #set($cellNumber = $foreach.count - 1)
     #set($field = $fields.get($cellNumber).get(1))
     #set($detailCalc = false)
-    #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
+    #set($isCalc = $field.getClass().getSimpleName() == "CalculationFieldDefn")
+    #if($isCalc)
       #if(!$headingCalcs.contains($field.getReportCalcField()))
         #set($detailCalc = true)
       #end
     #end
-    #if(($detailTables.contains($field.getTableContainingField()) || ($detailCalc)) && (!$field.isPrimaryKey()))
+    #if((($detailTables.contains($field.getTableContainingField()) && !$isCalc) || ($detailCalc)) && (!$field.isPrimaryKey()))
       #set($rightAlign = false)
       #set($fieldCategory = $field.getFieldCategory().toString())
       #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
