Num detail fields debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
@@ -64,6 +64,7 @@ $viewTools.log("Heading calcs are $headingCalcs")
   #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
     #if($headingCalcs.contains($reportField))
       #set($fieldInHeading = true)
+      $viewTools.log("Calc $reportField is in headingCalcs $headingCalcs")
     #end
   #elseif($headingTables.contains($table))
     #set($fieldInHeading = true)
