Num detail fields debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
@@ -81,3 +81,4 @@ $viewTools.log("Heading calcs are $headingCalcs")
   #end
 #end
 #set($detailTables = $detailMap.keySet())
+$viewTools.log("Detail tables are $detailTables")
