Hack to fix recipe printout h1

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -33,6 +33,11 @@
     #set($cellNumber = $foreach.count - 1)
     #set($field = $fields.get($cellNumber).get(1))
     #set($table = $field.getTableContainingField())
+    #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
+      #if($field.getReportCalcField().isFieldFromReport())
+        #set($table = $field.getReportCalcField().getReportFieldIsFrom().getParentTable())
+      #end
+    #end
     ## NOTE: hack on this line to check for a particular field for CH recipe printout
     ## TODO: something more generic, e.g. a calc. unique property
     #if( ($headingTables.contains($table) && $field.isPrimaryKey()) || ($field.getInternalFieldName() == "jyzbf3leq6ci2hnqr"))
