--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -17,6 +17,7 @@
 ##
 ## A report style similar to CrystalReports / JasperReports
 ##
+#set($rowCount = 0)
 #foreach($row in $data)
   ## row[0] contains the data to display in each field
   ## row[1] contains the click event parameters for the row
@@ -27,6 +28,7 @@
   #set($lastValues = $thisValues)
   #set($thisValues = $row.get(0))
   #set($thisUniqueId = $row.get(2))
+  #set($rowCount = $rowCount + 1)
   ## See if we're due any headings
   #foreach($cell in $thisValues)
     #set($headingLevel = 0)
@@ -40,7 +42,7 @@
     #end
     ## NOTE: hack on this line to check for a particular field for CH recipe printout
     ## TODO: something more generic, e.g. a calc. unique property
-    #if( ($headingTables.contains($table) && $field.isPrimaryKey()) || ($field.getInternalFieldName() == "jyzbf3leq6ci2hnqr"))
+    #if( ($headingTables.contains($table) && $field.isPrimaryKey()) || (($field.getInternalFieldName() == "jyzbf3leq6ci2hnqr") && ($rowCount > 2)))
       #if($cell != $lastValues.get($cellNumber))
         #set($headingLevel = $headingMap.get($table))
         <tr name="$thisUniqueId" 
