--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 	<br clear="all">
-    <table id=reportData cellspacing="0">
+    <div id="wrapper"><table id=reportData cellspacing="0">
       #if($sessionReport.getReportStyle() == "SECTIONED")
         #parse("gui/pane2/sectioned_calcs.vm")
         #parse("gui/pane2/sectioned_body.vm")
@@ -144,7 +144,7 @@
           #parse("gui/pane2/pane2_body.vm")
       </tbody>
       #end
-    </table>
+    </table></div>
 	  #set($summariesExist = false)
 	  #foreach($chart in $report.getSavedCharts())
           ## if a summary has been created
