--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
@@ -48,14 +48,15 @@
     <span class="sectioned_filter_name">Detail:</span> 
     #foreach($reportField in $sessionReport.getReportFields())
       #set($field = $reportField.getBaseField())
+      #set($internalFieldName = $field.getInternalFieldName())
       #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
         #if(!$headingCalcs.contains($reportField))
-          $field <input type="text" name="$field.getInternalFieldName()" /> &nbsp;&nbsp;&nbsp;
+          $field #parse("gui/pane2/filter_input.vm") &nbsp;&nbsp;&nbsp;
         #end
       #elseif(!$field.isPrimaryKey())
         #set($table = $field.getTableContainingField())
         #if(!$headingTables.contains($table))
-          $field <input type="text" name="$field.getInternalFieldName()" /> &nbsp;&nbsp;&nbsp;
+          $field #parse("gui/pane2/filter_input.vm") &nbsp;&nbsp;&nbsp;
         #end
       #end
     #end
