--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -111,7 +111,7 @@
     #parse('gui/pane2/pane2_body.vm')
   #elseif($table_part_only)
     #parse('gui/pane2/pane2_table.vm')
-  #elseif($sessionedReport)
+  #elseif($sectionedReport)
     #parse('gui/pane2/sectioned_body.vm')##
   #else##
     #parse('gui/pane2/include_delete_checkboxes.vm')##
