--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
@@ -40,6 +40,7 @@
 #end
 #if($data_part_only)
   #if($sessionReport.getReportStyle() == "SECTIONED")
+    #parse('gui/pane2/sectioned_calcs.vm')
     #parse('gui/pane2/sectioned_body.vm')
   #else
     #parse('gui/pane2/pane2_body.vm')
