Admin pane 3 button style

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
@@ -19,6 +19,7 @@
 
 <HTML>
 <HEAD>
+  <link href="resources/button/button.css" type="text/css" rel="stylesheet" />
   <link href="resources/module-colours.css" type="text/css" rel="stylesheet" />
   <STYLE>
 	
