Admin pane 3 button style

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
@@ -117,6 +117,7 @@
   <script src="resources/jquery.sparkline.js" language="Javascript"> </script>
   <SCRIPT language=Javascript src="resources/wait/request_setFilter.js"></SCRIPT> 
   <script type="text/javascript" src="resources/wait/editBuffer_editData.js"></script>  
+  <script type="text/javascript" src="resources/button/button.js"></script>  
   <SCRIPT language="JavaScript">
     jQuery(document).ready(function(){
       #if($pane2_id)
