--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -46,6 +46,7 @@ table#reportData th {
   font-size: 8pt!important;
   text-align: right;
   text-transform: none;
+  padding: 0.2em;
 }
 
 .record_link a {
