--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -172,7 +172,7 @@
                 #parse('gui/toolbar/buttons/print.vm')
 			        </div>
 			        <div class=buttonGroup> ## import/export
-			          #parse('gui/toolbar/buttons/links.vm')
+			          ## #parse('gui/toolbar/buttons/links.vm')
 			          #parse('gui/toolbar/buttons/import.vm')
 			          #parse('gui/toolbar/buttons/export.vm')
 			        </div>
