--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -42,17 +42,6 @@ table#reportData th {
   height: 10px;
 }
 
-.tab-item table#reportData th.record_link {
-  font-size: 8pt!important;
-  text-align: right;
-  text-transform: none;
-  padding: 0.2em;
-}
-
-.record_link a {
-  text-decoration: none;
-}
-
 table#reportData th[onclick]:hover {
   border-bottom-color:#FFD588!important;
   background-color:#F8F8F6!important;
@@ -403,6 +392,8 @@ img.mini_icon {
 .mini_action {
   font-size: 8pt!important;
   float: right;
+  padding: 0.2em;
+  font-weight: normal;
 }
 
 .mini_action a {
