--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -53,7 +53,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
               <th>&nbsp;</th>
               <th>Edit $sessionTable.getSingularName()</th>
             #else
-		        <th colspan="4"><div class="record_link"><a href="javascript:top.fLinks();"><img src="resources/icons/applications/tango/actions/mail-closed.png" />link...</a></div></th>
+		        <th colspan="4"><div class="mini_action"><a href="javascript:top.fLinks();"><img src="resources/icons/applications/tango/actions/mail-closed.png" />link...</a></div></th>
             #end
 		      </tr>
 		    </thead>
