--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/see_more_rows.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/see_more_rows.vm
@@ -31,7 +31,11 @@
       All $numRows records visible
     #end
     <div class="mini_action">
-      <a href="javascript:top.fExport();"><img src="resources/icons/applications/tango/actions/go-last.png">export...</a>
+      <a href="javascript:top.fExport();"><img src="resources/icons/applications/tango/actions/go-last.png">&nbsp;export...</a>
+      #if($sessionReport.equals($sessionReport.getParentTable().getDefaultReport()))
+        <br>
+        <a href="javascript:top.fImport();"><img src="resources/icons/applications/tango/actions/go-last.png">&nbsp;import...</a>
+      #end
     </div>
   </td>
 </tr>
