--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -171,11 +171,11 @@
                 #parse('gui/toolbar/buttons/filter.vm')
                 #parse('gui/toolbar/buttons/print.vm')
 			        </div>
-			        <div class=buttonGroup> ## import/export
+			        ##<div class=buttonGroup> ## import/export
 			          ## #parse('gui/toolbar/buttons/links.vm')
-			          #parse('gui/toolbar/buttons/import.vm')
-			          #parse('gui/toolbar/buttons/export.vm')
-			        </div>
+			          ###parse('gui/toolbar/buttons/import.vm')
+			          ###parse('gui/toolbar/buttons/export.vm')
+			        ##</div>
 			        <div class=buttonGroup> ## external applications, built in and customised
 			          ## #parse('gui/toolbar/buttons/wiki.vm')
 					  #set($userType = $appUser.getUserType())
