--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -345,6 +345,11 @@ tr.separator + tr.separator {
 	padding-left: 14px;
 }
 
+.seemorerows a {
+	color: #555555;
+	text-shadow: 0px 1px white;
+}
+
 .warningmessage {
 		-webkit-border-radius: 1em;
 		-moz-border-radius: 1em;
