--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -173,8 +173,10 @@
 			        </div>
 			        ##<div class=buttonGroup> ## import/export
 			          ## #parse('gui/toolbar/buttons/links.vm')
-			          ###parse('gui/toolbar/buttons/import.vm')
-			          ###parse('gui/toolbar/buttons/export.vm')
+                #if($viewTools.loggedInUserAllowedTo("ADMINISTRATE"))
+			            #parse('gui/toolbar/buttons/import.vm')
+			            #parse('gui/toolbar/buttons/export.vm')
+                #end
 			        ##</div>
 			        <div class=buttonGroup> ## external applications, built in and customised
 			          ## #parse('gui/toolbar/buttons/wiki.vm')
